lab-jaeger-istio-appsody-sbol/istio/service-b.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-b
  labels:
    app: service-b
    service: service-b
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: service-b
