lab-jaeger-istio-appsody-sbol/istio/service-hello.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tutorial-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-go
spec:
  gateways:
  - tutorial-gateway
  hosts:
  - '*'
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: helloworld-go
