lab-jaeger-istio-appsody-sbol/istio/virtual-service-b-delay-injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: distributing-tracing-b
spec:
  gateways:
  - distributing-tracing-gateway
  hosts:
  - service-b
  http:
  - fault:
      delay:
        fixedDelay: 5s
        percentage:
          value: 90
    route:
    - destination:
        host: service-b
        subset: v1
  - route:
    - destination:
        host: service-b
        subset: v1
      weight: 10
    - destination:
        host: service-b
        subset: v2
      weight: 90
