lab-jaeger-istio-appsody-sbol/istio/virtual-service-b.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-b
spec:
  hosts:
    - service-b
  http:
    - route:
        - destination:
            host: service-b
            subset: v1
          weight: 80
        - destination:
            host: service-b
            subset: v2
          weight: 20
